--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Pokémon finder</title>
   </head>
   <body>
-    <div id="app"></div>
+    <table id="poketable">
+      	<thead>
+          <th>Pokemon</th>
+          <th>Name</th>
+        </thead>
+    </table>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
