--- a/index.html
+++ b/index.html
@@ -2,17 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/style.css">
     <title>Pokémon finder</title>
   </head>
   <body>
-    <table id="poketable">
+    <div id="container-main">
+      <div>
+        <label for="amount">Pokemon amount</label><br>
+        <select name="amount" id="amount">
+          <option value="5">5</option>
+          <option value="10">10</option>
+          <option value="15">15</option>
+          <option value="20">20</option>
+          <option value="25">25</option>
+          <option value="30">30</option>
+          <option value="35">35</option>
+          <option value="40">40</option>
+          <option value="45">45</option>
+          <option value="50">50</option>
+        </select>
+        <button id="filter">Filter</button>
+      </div>
+      <table id="poketable">
       	<thead>
           <th>Pokemon</th>
           <th>Name</th>
         </thead>
-    </table>
+      </table>
+    </div>
+    
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
