Added Filter button, and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
         <br>
         <button id="filter">Filter</button>
       </div>
+
+
       <table id="poketable">
       	<thead>
           <th>Pokemon</th>
           <th>Name</th>
         </thead>
+        <tbody>
+        </tbody>
       </table>
     </div>
     
