Added a (not functional) button to favorite a pokemon and save it.
Also added a part of the code for this.

--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
 
       <table id="poketable">
       	<thead>
+          <th>Number</th>
           <th>Pokemon</th>
           <th>Name</th>
+          <th>Favorite</th>
         </thead>
         <tbody>
         </tbody>
       </table>
     </div>
-    
+    <script type="module" src="src/storageLogic.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
