Added some extra stuff
Gave sone extra pokemon info, like weight and height. Also fixed a bug where pokemon wouldn't be found if capital letters were used

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </select>
         <br>
         <button id="filter">Filter</button>
-        <div id="res" style="display: none;">Searching</div>
+        <div id="res" style="display: none;">Searching: Pokemon <span id="current"></span></div>
       </div>
 
       <table>
@@ -34,6 +34,8 @@
           <th>ID</th>
           <th>Pokemon</th>
           <th>Name</th>
+          <th>Height</th>
+          <th>Weight</th>
           <th>Favorite</th>
         </thead>
         <tbody id="poketable">
