--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input type="text" id="pokemonName"><br>
         <label for="amount">Pokemon amount:</label><br>
         <select name="amount" id="amount">
+          <option value="1">1</option>
           <option value="5">5</option>
           <option value="10">10</option>
           <option value="15">15</option>
