Fixed a bit of the code

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </select>
         <br>
         <button id="filter">Filter</button>
-        <div id="res" style="display: none;">Searching: Pokemon <span id="current"></span></div>
+        <div id="res" style="display: none;">
+          Searching: Pokemon <span id="current"></span>
+        </div>
       </div>
 
       <table>
